New: 7 day forecast with high and low temperature
modified:   public/index.html
modified:   src/index.html
  - Minor changes. The table is dynamically created using JS

modified:   public/main.js
modified:   src/index.js
  - Update the value for forecastDays to fetch forecast data from
    WeatherAPI, 7 day forecast
  - Create table dynamically and show proper data for each day
    of the week with high and low temperature
  - Remove existing data before appending the newly fetched data from
    the API

modified:   src/style.css
  - Add minimal syling to the page

there's so much to learn. i'm getting there

--- a/src/style.css
+++ b/src/style.css
@@ -25,18 +25,45 @@
 #dateForecast,
 #tempForecast,
 #minmaxForecast,
+#dayForecast,
+#dayForecast > table,
 body > main > div:nth-child(1) > p,
-body > main > div > h1 {
+body > main > div > h1,
+body > article {
   margin: 0;
-}
-
-#dayForecast {
-  text-align: center;
 }
 
 body > article {
-  margin: 0;
   padding: 0;
+}
+
+#dayForecast {
+  align-self: center;
+  padding: 0 4rem;
+  text-align: center;
+  width: 70%;
+}
+
+#dayForecast > table > caption {
+  text-align: start;
+  font-size: medium;
+  font-weight: 400;
+  text-decoration-line: underline;
+  text-decoration-thickness: from-font;
+  padding-bottom: 1rem;
+}
+
+#dayForecast > table > tbody > tr > td:nth-child(1) {
+  font-weight: bold;
+  text-align: start;
+}
+
+#dayForecast > table > tbody > tr > td:nth-child(2) {
+  text-align: center;
+}
+
+#dayForecast > table > tbody > tr > td:nth-child(3) {
+  text-align: end;
 }
 
 body > main > div:nth-child(1) {
@@ -50,5 +77,5 @@ body > main > div:nth-child(1) > h1 {
 main.container {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 5rem;
 }
